[tool.poetry]
name = "ottawa-transit-sms"
version = "0.1.0"
description = ""
authors = ["David Buckley <buckley.w.david@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
twilio = "^6.14"
flask = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.610.0"
pytest-cov = "^2.5"
black = "^18.3-alpha.0"
pylint = "^1.9"
